force-app/main/default/objects/Quote/fields/AutoRenewNoticeDays__c.field-meta.xml
<CustomField>
    <fullName>AutoRenewNoticeDays__c</fullName>
    <label>Auto-renew notice (days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>