force-app/main/default/objects/Quote/fields/AutoRenewTermMonths__c.field-meta.xml
<CustomField>
    <fullName>AutoRenewTermMonths__c</fullName>
    <label>Auto-renew term (months)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>