force-app/main/default/objects/Quote/fields/BillingContact__c.field-meta.xml
<CustomField>
    <fullName>BillingContact__c</fullName>
    <label>Billing Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>