force-app/main/default/objects/Quote/fields/BillingEmail__c.field-meta.xml
<CustomField>
    <fullName>BillingEmail__c</fullName>
    <label>Billing email</label>
    <type>TextArea</type>
</CustomField>