force-app/main/default/objects/Quote/fields/DataRetentionSessionReplayDays__c.field-meta.xml
<CustomField>
    <fullName>DataRetentionSessionReplayDays__c</fullName>
    <inlineHelpText>The default is 30 days. Can be extended for an additional fee</inlineHelpText>
    <label>Data retention - Session Replay (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>