force-app/main/default/objects/Quote/fields/Domains__c.field-meta.xml
<CustomField>
    <fullName>Domains__c</fullName>
    <label>Domains</label>
    <type>TextArea</type>
</CustomField>