force-app/main/default/objects/Quote/fields/EndDateGuaranteedPeriod__c.field-meta.xml
<CustomField>
    <fullName>EndDateGuaranteedPeriod__c</fullName>
    <formula>DATE(
YEAR(  ContractStartDate__c )
+ FLOOR(
(MONTH( ContractStartDate__c  ) +  GuaranteedPeriodMonths__c - 1 )
/ 12 ),
MOD(
MONTH ( ContractStartDate__c  )
+ GuaranteedPeriodMonths__c- 1
+ IF(
DAY ( ContractStartDate__c  )
&gt; CASE(
MOD(
MONTH(ContractStartDate__c  ) + GuaranteedPeriodMonths__c- 1,
12 ) + 1,
2, 28,
4, 30,
6, 30,
9, 30,
11, 30,
31 )
, 1
, 0 )
,
12
) + 1,
IF(
DAY( ContractStartDate__c  )
&gt; CASE(
MOD(
MONTH( ContractStartDate__c  ) + GuaranteedPeriodMonths__c- 1,
12 ) + 1,
2, 28,
4, 30,
6, 30,
9, 30,
11, 30,
31 )
, 1
, DAY( ContractStartDate__c  )
)
) - 1</formula>
    <label>End Date of Guaranteed Period</label>
    <type>Date</type>
</CustomField>