force-app/main/default/objects/Quote/fields/GuaranteedPeriodMonths__c.field-meta.xml
<CustomField>
    <fullName>GuaranteedPeriodMonths__c</fullName>
    <label>Guaranteed period (months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>