force-app/main/default/objects/Quote/fields/IncludedAppsSessionsPerYearMil__c.field-meta.xml
<CustomField>
    <fullName>IncludedAppsSessionsPerYearMil__c</fullName>
    <label>Included Apps sessions per year (mil)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>