force-app/main/default/objects/Quote/fields/Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Invoicing__c</fullName>
    <label>Invoicing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoicing</valueSetName>
    </valueSet>
</CustomField>