force-app/main/default/objects/Quote/fields/IroncladInformation__c.field-meta.xml
<CustomField>
    <fullName>IroncladInformation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ironclad Information</label>
    <referenceTo>ironclad__Ironclad_Workflow__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>