force-app/main/default/objects/Quote/fields/IsAutoRenewInEffect__c.field-meta.xml
<CustomField>
    <fullName>IsAutoRenewInEffect__c</fullName>
    <label>Is auto-renew in effect ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>