force-app/main/default/objects/Quote/fields/LegalContactEmail__c.field-meta.xml
<CustomField>
    <fullName>LegalContactEmail__c</fullName>
    <label>Legal Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>