force-app/main/default/objects/Quote/fields/MonthlyPageViewsMil__c.field-meta.xml
<CustomField>
    <fullName>MonthlyPageViewsMil__c</fullName>
    <formula>Opportunity.MonthlyPageViewsMil__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Page Views (mil)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>