force-app/main/default/objects/Quote/fields/NeedPOFromCustomerToInvoice__c.field-meta.xml
<CustomField>
    <fullName>NeedPOFromCustomerToInvoice__c</fullName>
    <label>Need a PO from customer to invoice?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>NO INFO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>