force-app/main/default/objects/Quote/fields/NumberFreeMonths__c.field-meta.xml
<CustomField>
    <fullName>NumberFreeMonths__c</fullName>
    <label>Number of free months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>