force-app/main/default/objects/Quote/fields/OptOutGranted__c.field-meta.xml
<CustomField>
    <fullName>OptOutGranted__c</fullName>
    <label>Opt-out granted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>