force-app/main/default/objects/Quote/fields/OptOutNeedNoticeBefore__c.field-meta.xml
<CustomField>
    <fullName>OptOutNeedNoticeBefore__c</fullName>
    <formula>EndDateGuaranteedPeriod__c -  OptOutPriorNoticeDays__c</formula>
    <label>Opt-out need notice before</label>
    <type>Date</type>
</CustomField>