force-app/main/default/objects/Quote/fields/OptOutPriorNoticeDays__c.field-meta.xml
<CustomField>
    <fullName>OptOutPriorNoticeDays__c</fullName>
    <label>Opt-out prior notice (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>