force-app/main/default/objects/Quote/fields/SecurityContactEmail__c.field-meta.xml
<CustomField>
    <fullName>SecurityContactEmail__c</fullName>
    <label>Security Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>