force-app/main/default/objects/Quote/fields/TotalPVPYUpToMil__c.field-meta.xml
<CustomField>
    <fullName>TotalPVPYUpToMil__c</fullName>
    <label>Total PVPY up to (mil)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>